test/tests/compiler/14_pointers/invalid_types/extra_credit/compound_mod_pointer.plx
#  A pointer can't appear as the left or right operand
#  * of the *=, /=, or %= operator
#  
pub fn main(none) i32 {
    i: i32 = 10
    ptr: *i32 = @i
    i %= ptr
    return 0
}
